<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="empty_string"></string>
	<string name="bookmark">Bookmark</string>
	<string name="add_bookmark">Add Bookmark</string>
	<string name="show_bookmark">Show Bookmarks</string>
	<string name="toc_title">Menu</string>
	<string name="bookmark_title">Bookmarks</string>
	<string name="add_bookmark_success">Bookmark Successfully Added</string>
	<string name="add_bookmark_fail">Fail to Add Bookmark</string>
	<string name="toc_goto">Go to</string>
	<string name="toc_page">P</string>
	<string name="preference_title">Setting</string>
	<string name="fontsize_text">Fontsize</string>
	<string name="enlarge">Larger</string>
	<string name="smaller">Smaller</string>
	<string name="defaultsize">Default</string>
	<string name="others">Others</string>
	<string name="light_text">Background Light</string> 
	<string name="background_text">Background Style</string>
	<string name="bgstyle_default">Default</string>
	<string name="bgstyle_warmyellow">Warm Yellow</string>
	<string name="bgstyle_graygreen">Gray Green</string>
	<string name="bgstyle_sheet">Sepia</string>
	<string name="jump_text">Jump To</string>
	<string name="no_explaination">Cannot find explaination</string>
	<string name="BS">BS</string>
	<string name="BH">BH</string>
	<string name="SingleSelection">Single Choice</string>
	<string name="BiaoDian">\\“\\”，。、？（）；‘</string>
	<string name="Cancel">Cancel</string>
	<string name="back">Back</string>
	<string name="Pinyin">Pingyin</string>
</resources>
